# e164-phones-countries

./: Cargo.toml  README.md
src/: data.rs  lib.rs
