[package]
name = "e164-phones-countries"
version = "0.2.0"
authors = ["<visualjeff@linux.com>"]
description = "A small utility which maps E.164 international phone numbers to ISO 3166 country codes as well as the ISO 3166 country codes to country phone codes."
documentation = "https://docs.rs/e164-phones-countries"
repository = "https://github.com/visualjeff/e164-phones-countries.git"
readme = "README.md"
keywords = ["e164", "ISO3166"]
license = "MIT"
edition = "2021"

[features]
default = ["ahash"]

[dependencies]
lazy_static = "1"
ahash = { version = "0.8", optional = true }
